# starfish

./: .gitignore  Cargo.toml  README.md
doc/log/: starfish_wgpu_development_log_2026-07-08.md
examples/: 01_hello_world.rs  02_triangles.rs  03_texture.rs  04_coord_system.rs  05_storage_cube.rs  play_sound.rs
resources/shaders/: coord_system.wgsl  storage_cube.wgsl  texture.wgsl  triangle.wgsl
src/: lib.rs
src/base/: color.rs  error.rs  mod.rs
src/base/audio/: mod.rs  music.rs  sfx.rs  track.rs
src/base/audio/decoder/: mod.rs  symphonia.rs
src/base/maths/: 记录.txt
src/base/maths/geometry/: primitive.rs  text_mesh.rs
src/base/maths/shapes/: Line2D.rs  Rect.rs
src/base/render/: beifencontext.txt  command_encoder.rs  mod.rs  render_context.rs  render_entry.rs  render_resource_access.rs  render_surface.rs  sampler_desc.rs  settings.rs
src/base/render/bind_group/: bind_group.rs  bindings.rs  builder.rs  field_layout.rs  field_type.rs  field_value.rs  mod.rs  storage_buffer.rs  struct_layout.rs  uniform_buffer.rs
src/base/render/ext/: mipmap.rs  mod.rs
src/base/render/mesh/: buffer_layout.rs  builder.rs  mesh.rs  mod.rs
src/base/render/pipeline/: mod.rs  pipeline_compliation_config.rs
src/base/render/render_pass/: attachments.rs  compute_pass.rs  mod.rs  render_pass.rs
src/base/render/shader_module/: builder.rs  mod.rs  (+1 more)
src/base/resources/: mod.rs  shader.rs
src/base/subsystem/: event.rs  joystick.rs  mod.rs  video.rs
src/base/window/: hit_test.rs  mod.rs  window.rs
src/data/: colors.json
src/pygame/: color.rs  mod.rs  rect.rs
(+15 files in other folders)
