[package]
name = "starfish"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.13.0"
thiserror = "2.0.18"
bytemuck = { version = "1.23", features = ["derive"] }
env_logger = "0.11.11" 
cgmath = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.4"
serde_json = "1.0.150"

wgpu = {version="30.0.0"}
pollster = "0.4"



# hound = "3.5.1"

# 通用音频解码（OGG/MP3/FLAC/WAV），纯 Rust 实现
symphonia = { version = "0.5", default-features = false, features = ["ogg", "mp3", "flac", "wav", "pcm"] }



sdl3 = { version = "0.18.4", default-features = false, features = [
    "raw-window-handle",
    "build-from-source-static",  # 自动编译 SDL3，永不报错
]}
# 底层 sdl3-sys 精准控制子系统
sdl3-sys = {version = "0.6.7+SDL-3.4.12",default-features = false,features = [
        # 1. 全局关闭所有默认子系统（核心）
        "no-default-subsystems",
        # 2. 手动开启 刚需子系统
        "sdl-audio",     # 音频 游戏必备
        "sdl-video",     # 窗口/视频 必开（WGPU 依赖）
        "sdl-camera",    # 摄像头
        "sdl-joystick",  # 摇杆/手柄 输入
        "sdl-haptic",    # 力反馈传感器
        "sdl-hidapi",    # HID 底层兼容，提升键鼠/手柄稳定性
        "sdl-sensor",    # 传感器
]}
raw-window-handle = "0.6.2"



glam = { version = "0.33.2", features = ["bytemuck"] }

image = "0.25.10"

ttf-parser = "0.25.1"

gltf = { version = "1.4.1",  features = ["import", "extensions", "extras"] }